--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
 }
 .playground{
     display: flex;
+
+}
+.playbox{
+    width: 200px;
+    height: 200px;
     border: 1px solid black;
-    text-align: center;
-    width: 600px;
-    height: 600px;
 }
